fixa merge konflikt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,13 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Visa H2-konsol (bra för debugging)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+
+# MongoDB
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=mongoDB
+
+#JWT
+jwt.secret=w8a9KLcSweDGMpE8jQ5fZhP2xRt7UyVbF3nA6B4X
+jwt.expiration=86400000
