--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,22 @@
 spring.application.name=ReviewService
 
-spring.datasource.url=jdbc:h2:mem:reviewservicedb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:reviewservicedb
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Visa H2-konsol (bra för debugging)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
 
 # MongoDB
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=mongoDB
+spring.data.mongodb.uri=mongodb://localhost:27017/reviewdb
+
 
 #JWT
 jwt.secret=w8a9KLcSweDGMpE8jQ5fZhP2xRt7UyVbF3nA6B4X
