--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,23 @@ version: '3.8'
 
 services:
   app:
-    image: reviewservice:1.0
+    image: reviewservice:latest
+    container_name: review-container
     ports:
-      - "8080:8080"
+      - "443:443"  # Exponera HTTPS-port
     environment:
       - SPRING_DATA_MONGODB_URI=mongodb://db:27017/reviewdb
+      - SERVER_PORT=443
+      - SERVER_SSL_ENABLED=true
+      - SERVER_SSL_KEY_STORE=/keystore.p12  # Lagringsplats för SSL-certifikatet
+      - SERVER_SSL_KEY_STORE_PASSWORD=${SSL_KEYSTORE_PASSWORD}  # Hantering av lösenord via Docker
+      - SERVER_SSL_KEY_STORE_TYPE=PKCS12
+    volumes:
+      - ./keystore.p12:/keystore.p12  # Montera keystore i containern
     depends_on:
       db:
         condition: service_healthy
+
   db:
     image: mongo:latest
     container_name: reviewdb
