--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,4 +33,4 @@ logging.level.se.reviewservice=DEBUG
 logging.level.org.springframework.security=DEBUG
 
 # Använd mockad data istället för riktiga API-anrop
-use.mocked.data=true
+use.mocked.data=false
