Fixa api request till openweather

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,12 @@
 spring.application.name=ReviewService
 
 # MongoDB
-spring.data.mongodb.uri=mongodb://mongodb:27017/reviewservicedb
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=mongoDB
-#spring.data.mongodb.uri=mongodb://localhost:27017/reviewdb
+#spring.data.mongodb.uri=mongodb://mongodb:27017/reviewservicedb
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=mongoDB
+spring.data.mongodb.uri=mongodb://localhost:27017/reviewdb
 
-# SSL config
-#server.ssl.key-alias=happyreview
-#server.ssl.key-store=file:/keystore.p12
-#server.ssl.key-store-password=knarkIpase38
-#server.ssl.key-store-type=PKCS12
-#server.ssl.key-store-provider=SunJSSE
-#server.ssl.enabled=true
-#server.port=443
 
 #logging.level.org.springframework.boot.autoconfigure.ssl=DEBUG
 #logging.level.org.apache.tomcat.util.net=TRACE
