--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=ReviewService
 
 # MongoDB
-#spring.data.mongodb.uri=mongodb://mongodb:27017/reviewservicedb
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=mongoDB
-spring.data.mongodb.uri=mongodb://localhost:27017/reviewdb
+spring.data.mongodb.uri=mongodb://mongodb:27017/reviewservicedb
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=mongoDB
+#spring.data.mongodb.uri=mongodb://localhost:27017/reviewdb
 
 
 #logging.level.org.springframework.boot.autoconfigure.ssl=DEBUG
